workaround for withObjectMocked